fixed organizers alignment issue

--- a/style.css
+++ b/style.css
@@ -598,6 +598,15 @@ p {
   }
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 16px;
+  /* Adjust as needed */
+  padding: 16px;
+  /* Optional for spacing */
+}
+
 .small,
 small {
   font-size: 90%
@@ -997,7 +1006,10 @@ pre code {
 
 .row {
   margin-left: -15px;
-  margin-right: -15px
+  margin-right: -15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .row:after,
@@ -4873,7 +4885,7 @@ button.close {
   cursor: pointer;
   background: transparent;
   border: 0;
-  -webkit-appearance: none
+  -webkit-appearance: none;
 }
 
 .carousel,
@@ -5076,8 +5088,8 @@ button.close {
   border: 1px solid #fff;
   border-radius: 10px;
   cursor: pointer;
-  background-color: #000\9;
-  background-color: transparent
+  background-color: #0009;
+  background-color: transparent;
 }
 
 .carousel-indicators .active {
